# hw4-prim-mst

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
mst/: graph.py
test/: test_mst.py
